# ChangeLog for kde-misc/kompose
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/kompose/Attic/ChangeLog,v 1.3 2004/11/23 15:50:26 carlo Exp $

  23 Nov 2004; Carsten Lohrke <carlo@gentoo.org> kompose-0.5.ebuild:
  stable on x86

*kompose-0.4.2 (31 Oct 2004)

  31 Oct 2004; Carsten Lohrke <carlo@gentoo.org> +metadata.xml,
  +kompose-0.3.ebuild, +kompose-0.4.1.ebuild, +kompose-0.4.2.ebuild,
  +kompose-0.5.ebuild:
  Moved from x11-misc/kompose to kde-misc/kompose.

*kompose-0.5 (18 Oct 2004)

  18 Oct 2004; Carsten Lohrke <carlo@gentoo.org> +kompose-0.5.ebuild:
  version bump

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> kompose-0.3.ebuild,
  kompose-0.4.1.ebuild:
  Masked kompose-0.4.1.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> kompose-0.3.ebuild:
  Masked kompose-0.3.ebuild stable for ppc

*kompose-0.4.2 (03 Sep 2004)

  03 Sep 2004; Caleb Tennis <caleb@gentoo.org> +kompose-0.4.2.ebuild:
  Version bump

*kompose-0.4.1 (23 Aug 2004)

  23 Aug 2004; Carsten Lohrke <carlo@gentoo.org> +kompose-0.4.1.ebuild:
  version bump

  09 Aug 2004; Danny van Dyk <kugelfang@gentoo.org> kompose-0.3.ebuild:
  Marked ~amd64.

  03 Aug 2004; David Holm <dholm@gentoo.org> kompose-0.3.ebuild:
  Added to ~ppc.

*kompose-0.3 (01 Aug 2004)

  01 Aug 2004; Carsten Lohrke <carlo@gentoo.org> +kompose-0.3.ebuild:
  Initial ebuild. Thanks to Alberto Garcia Hierro.
