@@ -1,0 +1,1 @@
+MD5 70ac5180af3ec86da366c48d10e71dce kompose-0.5.1.tar.bz2 492190
