@@ -1,6 +1,11 @@
 # ChangeLog for kde-misc/kompose
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kompose/Attic/ChangeLog,v 1.3 2004/11/23 15:50:26 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kompose/Attic/ChangeLog,v 1.4 2004/12/22 20:59:26 carlo Exp $
+
+*kompose-0.5.1 (22 Dec 2004)
+
+  22 Dec 2004; Carsten Lohrke <carlo@gentoo.org> +kompose-0.5.1.ebuild:
+  version bump
 
   23 Nov 2004; Carsten Lohrke <carlo@gentoo.org> kompose-0.5.ebuild:
   stable on x86
